<resources>
    <string name="app_name">test</string>
    <string name="title_activity_app_nav_main">app_nav_mainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_creator">제작자</string>

    <string name="menu_myinfo">내정보</string>
    <string name="menu_searchPC">PC방 찾기</string>
    <string name="menu_favortie">즐겨찾기</string>
    <string name="menu_seat">좌석</string>
    <string name="menu_offPC">PC 종료</string>
    <string name="menu_LogOut">로그아웃</string>
    <string name="title_activity_menubar">홈</string>
    <string name="btn_register">아이디가 없으신가요?</string>
    <string name="btn_forgotpassword">비밀번호 찾기</string>
    <string name="title_activity_fullscreen">제작자</string>
    <string name="dummy_content">편--안\n남윤창\n홍진혁\n김민철\n정용훈\n오윤제</string>
    <string name="title_activity_creator">CreatorActivity</string>
</resources>
